# TestSundtekApi

./: .gitignore  CMakeLists.txt  README.md
cmake/: cppcheckhelper.cmake
src/: CMakeLists.txt
src/application/: CMakeLists.txt  main.cpp
src/libary/: CMakeLists.txt  deviceManager.cpp  deviceManager.hpp  sundtekApi.cpp  sundtekApi.hpp
