cmake_minimum_required(VERSION 3.10 FATAL_ERROR)

SET (CMAKE_VERBOSE_MAKEFILE 1) # Use 1 for debugging, 0 for release
SET(PKG_CONFIG_USE_CMAKE_PREFIX_PATH TRUE)
find_package(PkgConfig)
include(CheckCXXCompilerFlag)

project(sundtekApiSample LANGUAGES CXX VERSION 0.0.1)

SET (MAINFOLDER ${PROJECT_SOURCE_DIR})

SET (EXECUTABLE_OUTPUT_PATH "${MAINFOLDER}/bin")
SET (LIBRARY_OUTPUT_PATH "${MAINFOLDER}/lib")
SET (LIBS_DIR "${MAINFOLDER}/lib")

include(CTest)
enable_testing()

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -DDEBUG")

CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
IF(COMPILER_SUPPORTS_CXX11)
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ELSE()
   message(ERROR "we need c++11 to build")
ENDIF()

ADD_SUBDIRECTORY(src)
